# django-task-app

./: .gitignore  Django Database.csv  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  package-lock.json  pyproject.toml
static/CACHE/css/: output.025cabacaf06.css  output.0ad4a88d8922.css  output.132fa1fdeb41.css  output.190ca11b9da3.css  output.1bc01510381b.css  output.2b60dccff981.css  output.2b797368591d.css  output.2ebc6619f3aa.css  output.2f15204d49b9.css  output.324a2c9fb771.css  output.4006ca4f815b.css  output.4177a533d90c.css  output.42ba447d7e15.css  output.4380ee6a222f.css  output.484228af1fa8.css  output.491772e66dc4.css  output.494b746dc238.css  output.4e0c6b902b22.css  output.5528131efdbf.css  output.57a31e2e3dad.css  output.5cd9afb4fdf7.css  output.5f5c3d05451a.css  output.619cec866805.css  output.662d55cd7065.css  output.67a38fc15f2b.css  output.68798cdd0663.css  output.69a56867e671.css  output.70485a4607bf.css  output.70c6f773b876.css  output.72c446263592.css  (+32 more)
static/js/: dashboard.js  edit_task.js
static/src/: output.css
task_app/: settings.py  urls.py
tasks/: api.py  forms.py  middleware.py  models.py  schemas.py  services.py  urls.py  views.py
tasks/data/: Django Database.csv
tasks/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_is_urgent_and_more.py  0003_alter_task_id.py  0004_alter_task_is_urgent.py  0005_alter_task_is_urgent.py  0006_load_initial_data.py
templates/: _base.html  index.html
templates/tasks/: dashboard.html  edit_task.html  index.html
templates/users/: login.html
users/: views.py
(+8 files in other folders)
